styles.css
/* ... */
.rating .full {
  background-image: url("https://pingtree-prod.s3.us-west-1.amazonaws.com//6745bd3070f35c32c318f267.webp");
}
.rating .half {
  background-image: url("https://pingtree-prod.s3.us-west-1.amazonaws.com//6745c6f1b020ff1283c55338.webp");
}
.rating .empty {
  background-image: url("https://pingtree-prod.s3.us-west-1.amazonaws.com//6745c77e70f35c32c318fd38.webp");
}
.rating p {
  color: #888;
}
.visit-site {
  background-color: #083f67;
}
.contact-icon {
  height: 15px;
  width: 15px;
  min-width: 15px;
}
.ribbon {
  position: absolute;
  top: -4px;
  left: -4px;
  background: #083f67;
  color: #fff;
  padding: 10px;
  min-width: 70px;
  min-height: 57px;
  filter: drop-shadow(4px 6px 2px rgba(0, 0, 0, 0.1));
}
.debt-consolidation-rankings p {
  color: #54595f;
}
.bg-dark-gray {
  background-color: #eee;
}
.section-navigation span {
  color: #7a7a7a;
  cursor: pointer;
}
.section-navigation span:hover {
  text-decoration: underline;
}
.section-navigation span.active,
.section-navigation span:hover {
  color: #083f67;
}
#debt-consolidated-rankings {
  background-image: url("https://pingtree-prod.s3.us-west-1.amazonaws.com//6745ac81b020ff1283c535d4.webp");
  min-height: 514px;
  border-radius: 0px 0px 85px 85px;
}
.-mt-44 {
  margin-top: -180px;
}
@media (min-width: 768px) {
  .md\:relative {
    position: relative;
  }
  .md\:-mt-44 {
    margin-top: -180px;
  }
}
@media (max-width: 767px) {
  #debt-consolidated-rankings {
    border-radius: 0;
    min-height: 40vh;
  }
  .hide-mobile {
    display: none !important;
  }
  .bg-debt-light-gray {
    background-color: #fff;
  }
  .brand-logo {
    justify-content: center;
    display: grid;
  }
  .top-cta {
    font-size: 26px !important;
  }
  label[for="3_Get Debt Relief"] {
    font-size: 32px !important;
    line-height: normal !important;
  }
}
.light-color {
  color: #083f67 !important;
}
.cl-bg {
  background: linear-gradient(
    180deg,
    rgba(255, 255, 255, 1) 21%,
    rgb(229 237 241) 100%
  ) !important;
}
.footer {
  background-color: #083f67 !important;
  margin-top: auto;
}

/* Multi Form Quiz */

*,
::before,
::after {
  box-sizing: border-box;
  border-width: 0;
  border-style: solid;
  border-color: #e5e7eb;
}

::before,
::after {
  --tw-content: "";
}

html {
  line-height: 1.5;
  -webkit-text-size-adjust: 100%;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  font-feature-settings: normal;
  font-variation-settings: normal;
}

body {
  margin: 0;
  line-height: inherit;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

/* Make main content area grow to push footer down */
body > .bg-white {
  flex: 1;
  display: flex;
  flex-direction: column;
}

hr {
  height: 0;
  color: inherit;
  border-top-width: 1px;
}

abbr:where([title]) {
  -webkit-text-decoration: underline dotted;
  text-decoration: underline dotted;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-size: inherit;
  font-weight: inherit;
}

a {
  color: inherit;
  text-decoration: inherit;
}

b,
strong {
  font-weight: bolder;
}

code,
kbd,
samp,
pre {
  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
    "Liberation Mono", "Courier New", monospace;
  font-size: 1em;
}

small {
  font-size: 80%;
}

sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}

sub {
  bottom: -0.25em;
}

sup {
  top: -0.5em;
}

table {
  text-indent: 0;
  border-color: inherit;
  border-collapse: collapse;
}

button,
input,
optgroup,
select,
textarea {
  font-family: inherit;
  font-size: 100%;
  font-weight: inherit;
  line-height: inherit;
  color: inherit;
  margin: 0;
  padding: 0;
}

button,
select {
  text-transform: none;
}

button,
[type="button"],
[type="reset"],
[type="submit"] {
  appearance: button;
  background-color: transparent;
  background-image: none;
}

:-moz-focusring {
  outline: auto;
}

:-moz-ui-invalid {
  box-shadow: none;
}

progress {
  vertical-align: baseline;
}

::-webkit-inner-spin-button,
::-webkit-outer-spin-button {
  height: auto;
}

[type="search"] {
  appearance: textfield;
  outline-offset: -2px;
}

::-webkit-search-decoration {
  -webkit-appearance: none;
}

::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

summary {
  display: list-item;
}

blockquote,
dl,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
hr,
figure,
p,
pre {
  margin: 0;
}

fieldset {
  margin: 0;
  padding: 0;
}

legend {
  padding: 0;
}

ol,
ul,
menu {
  list-style: none;
  margin: 0;
  padding: 0;
}

textarea {
  resize: vertical;
}

input::-moz-placeholder,
textarea::-moz-placeholder {
  opacity: 1;
  color: #9ca3af;
}

input::placeholder,
textarea::placeholder {
  opacity: 1;
  color: #9ca3af;
}

button,
[role="button"] {
  cursor: pointer;
}

:disabled {
  cursor: default;
}

img,
svg,
video,
canvas,
audio,
iframe,
embed,
object {
  display: block;
}

img,
video {
  max-width: 100%;
  height: auto;
}

[hidden] {
  display: none;
}
/* ... */

